[project]
name = "techstax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.40.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-pymongo>=3.0.1",
    "flask-socketio>=5.5.1",
    "pymongo>=4.13.0",
]
